--- a/index.html
+++ b/index.html
@@ -10,14 +10,26 @@
 </head>
 
 <body>
-	<div class="wrapper">
-		<div class="a">A</div>
-		<div class="r">R</div>
-		<div class="s">S</div>
-		<div class="e">E</div>
-		<div class="n">N</div>
-		<div class="a2">A</div>
-		<div class="l">L</div>
+	<div class="a">
+		<p>A</p>
+	</div>
+	<div class="r">
+		<p>R</p>
+	</div>
+	<div class="s">
+		<p>S</p>
+	</div>
+	<div class="e">
+		<p>E</p>
+	</div>
+	<div class="n">
+		<p>N</p>
+	</div>
+	<div class="a2">
+		<p>A</p>
+	</div>
+	<div class="l">
+		<p>L</p>
 	</div>
 </body>
 
